--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "updatedb": "./node_modules/.bin/babel-node database/updatedb"
   },
   "dependencies": {
     "expo": "^32.0.0",
@@ -14,7 +15,10 @@
     "react-navigation": "^3.9.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "@babel/node": "^7.2.2",
+    "babel-preset-expo": "^5.0.0",
+    "csv-parse": "^4.4.1",
+    "request": "^2.88.0"
   },
   "private": true
 }
