--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@babel/node": "^7.2.2",
     "babel-preset-expo": "^5.0.0",
     "csv-parse": "^4.4.1",
-    "request": "^2.88.0"
+    "node-fetch": "^2.5.0"
   },
   "private": true
 }
