--- a/app.json
+++ b/app.json
@@ -24,6 +24,13 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.mteuber.pabutterflyfieldguide",
+      "adaptiveIcon": {
+        "backgroundColor": "#000000",
+        "foregroundImage": "./assets/iconAndroidForeground.png"
+      }
     }
   }
 }
