--- a/app.json
+++ b/app.json
@@ -30,6 +30,7 @@
       "adaptiveIcon": {
         "backgroundColor": "#000000",
         "foregroundImage": "./assets/iconAndroidForeground.png"
+      "versionCode":2
       },
       "permissions": []
     }
