--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "ios",
       "android"
     ],
-    "versionCode": 2.0,
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
