--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "updatedb": "./node_modules/.bin/babel-node database/updatedb"
   },
   "dependencies": {
-    "expo": "^33.0.0",
-    "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "expo": "^51.0.0",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/node": "^7.2.2",
-    "babel-preset-expo": "^5.0.0",
+    "babel-preset-expo": "~11.0.0",
     "csv-parse": "^4.4.1",
     "node-fetch": "^2.5.0"
   },
