--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "expo": "^51.0.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^1.10.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/node": "^7.2.2",
